--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@nestjs/common": "^11.1.2",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
